2014-03-21  Ethan A Merritt  <merritt@u.washington.edu>

	* src/parse.c (check_for_iteration next_iteration):
	Replace overly clever checks for end condition already satisfied with
	one that doesn't fail due to overflow of integer multiplication.
	Bug #1358

2014-03-20  Bastian Maerkisch  <bmaerkisch@web.de>

	* src/set.c:  "set encoding locale" only handles utf8 and sjis. Extend
	this to all supported encodings on Windows, probably the only platform
	where this is still relevant.
	Bug #1270

2014-03-20  Ethan A Merritt  <merritt@u.washington.edu>

	* term/svg.trm:  svg was losing the current linetype (i.e. dash type)
	between drawing the key sample and drawing the main plot.

2014-03-14  Ethan A Merritt  <merritt@u.washington.edu>

	* src/datafile.c (df_parse_string_field):  Memory allocation for column
	header strings had O(n^2) dependence on the length of the first line.
	Replace this with an O(n) scheme.  This should also improve performance
	when handling string-value data columns in long input lines.
	Bug #1355

2014-03-13  Ethan A Merritt  <merritt@u.washington.edu>

	* src/datafile.c (df_open df_readascii):  New keyword "skip" tells the
	program to skip lines at the start of an ascii data file.  Note this is
	different from "every ::N", which skips lines at the start of the data
	file but also at the start of each subsequent data block in the file.
	Backport from 4.7

2014-03-03  Ethan A Merritt  <merritt@u.washington.edu>

	* docs/Makefile.in:  Do not include generated file pdffigures.tex
	in the distribution package.

2014-02-26  Ethan A Merritt  <merritt@u.washington.edu>

	* src/qtterminal/qt_term.cpp(qt_connectToServer qt_waitforinput):
	If the outboard server gnuplot_qt is killed while gnuplot is connected
	to it, it gets restarted with a different server name.  Don't waste
	time trying to connect to a server with the old name.

2014-02-26  Carl Michal <michal@phas.ubc.ca>

	* src/fit.c src/fit.h src/save.c src/set.c src/show.c src/unset.c